# C-Project

./: .gitignore  CMakeLists.txt  Question1.c  README.md  main.c
Question 1/: CMakeLists.txt  Question1.c
Question 2/: CMakeLists.txt  Question2A.c  Question2A.h  Question2B.c  Question2B.h  SetMethodsA.c  SetMethodsB.c  setMethodsA.h  setMethodsB.h  testingStructFileA.h  testingStructFileB.h
